# cpp-tdd-2025-02-17

./: CMakeLists.txt  README.md  vcpkg.json
dependency-control/src/include/: calculator.hpp
dependency-control/tests/: calculator_tests.cpp
googlemock-demo/tests/: gmock_tests.cpp
injecting-dependencies/: main.cpp
injecting-dependencies/src/: button.hpp  led_light.hpp
injecting-dependencies/tests/: button_tests.cpp
legacy-to-testable/: CMakeLists.txt
legacy-to-testable/src/: source.hpp
legacy-to-testable/tests/: CMakeLists.txt  source_tests.cpp
mocks-vs-stubs/tests/: order_interactions_tests.cpp
mother-vs-builder/src/: flight_service.hpp
mother-vs-builder/tests/: flight_service_tests.cpp
snake-outside-in/: CMakeLists.txt
snake-outside-in-start/: main.cpp  vcpkg.json
snake-outside-in-start/snake_lib/: CMakeLists.txt
snake-outside-in-start/snake_sfml/: CMakeLists.txt
snake-outside-in-start/snake_tests/: snake_tests.cpp
snake-outside-in/snake_console/: CMakeLists.txt  console_terminal.hpp  main.cpp
snake-outside-in/snake_lib/include/snake/: snake.hpp
snake-outside-in/snake_lib/src/: snake.cpp
snake-outside-in/snake_sfml/: main.cpp  sfml_terminal.hpp
snake-outside-in/snake_tests/: CMakeLists.txt  snake_tests.cpp
tdd-katas/catch2/bowling-catch/tests/: CMakeLists.txt  bowling_tests.cpp
tdd-katas/catch2/mars-rover-catch/: CMakeLists.txt
tdd-katas/catch2/recently-used-list-catch/: README.md
tdd-katas/catch2/recently-used-list-catch/src/: recently_used_list.cpp  recently_used_list.hpp
tdd-katas/catch2/recently-used-list-catch/tests/: CMakeLists.txt  recently_used_list_tests.cpp
tdd-katas/gtest/bowling/src/: bowling.hpp
tdd-katas/gtest/bowling/tests/: CMakeLists.txt  bowling_tests.cpp
